Update reality.txt, vmess_tvc.txt, vmess.txt and related files

--- a/vmess_tvc_clash.yaml
+++ b/vmess_tvc_clash.yaml
@@ -18,6 +18,10 @@ proxies:
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 14","type":"vmess","server":"120.232.153.63","port":40972,"cipher":"auto","uuid":"770ee730-2450-4e3c-a6c6-3932bd32afbd","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 15","type":"vmess","server":"183.236.48.163","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇨🇳CN | 🟢 | vmess | @mftizi | 16","type":"vmess","server":"120.232.153.27","port":58831,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇦🇹AT | 🟢 | vmess | @ConfigsHUB | 3","type":"vmess","server":"45.138.74.173","port":13700,"cipher":"auto","uuid":"94f9b111-6777-4794-ac4d-d1774a0c425f","alterId":,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🚩CF | 🟢 | vmess | @ConfigsHUB | 4","type":"vmess","server":"104.21.83.208","port":443,"cipher":"auto","uuid":"f584de15-2034-4170-a723-f48c2bae5e0f","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"host":"afrhms16v.bestxray.buzz"}},"client-fingerprint":"chrome"}
+  - {"name":"🚩CF | 🟢 | vmess | @ConfigsHUB | 5","type":"vmess","server":"188.114.96.3","port":443,"cipher":"auto","uuid":"05641cf5-58d2-4ba4-a9f1-b3cda0b1fb1d","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"host":"obdii.cfd"}},"client-fingerprint":"chrome"}
+  - {"name":"🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 13","type":"vmess","server":"tr.snapppro.nikastoring.ir","port":1616,"cipher":"auto","uuid":"e86bcd55-d45e-4388-b19c-d61b648462b8","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🟢 | vmess | @proxystore11 | 6","type":"vmess","server":"65.109.190.91.suupermeat.ir","port":2053,"cipher":"auto","uuid":"b4493eed-d316-45d5-addf-9857ffeba30e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
   - {"name":"🇹🇼TW | 🟢 | vmess | @yaney_01 | 1","type":"vmess","server":"45.199.138.217","port":41000,"cipher":"auto","uuid":"f9fa3a9c-f7d5-414f-88e6-6970585d9949","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/282018252526","headers":{"host":""}},"client-fingerprint":"chrome"}
   - {"name":"🇯🇵JP | 🟢 | vmess | @yaney_01 | 2","type":"vmess","server":"107.149.119.43","port":37000,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/path/040318142507","headers":{"host":""}},"client-fingerprint":"chrome"}
@@ -36,11 +40,10 @@ proxies:
   - {"name":"🇧🇬BG | 🟢 | vmess | @Hope_Net | 12","type":"vmess","server":"147.78.140.68","port":443,"cipher":"auto","uuid":"f584de15-2034-4170-a723-f48c2bae5e0f","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/afrhms16v.bestxray.buzz/linkws","headers":{"host":"6c47-butterfly-6c47.yexoji3749.workers.dev"}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 13","type":"vmess","server":"denc36.xtooltech.cfd","port":443,"cipher":"auto","uuid":"b321fd5d-e6ec-4293-a644-164e3885f52e","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"host":"adenc36v.xtooltech.cfd"}},"client-fingerprint":"chrome"}
   - {"name":"🚩CF | 🟢 | vmess | @Hope_Net | 14","type":"vmess","server":"104.16.67.38","port":2082,"cipher":"auto","uuid":"76221bfb-e92f-4e80-81c5-6fe48f50ac0b","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/glweidf.sbs/linkws","headers":{"host":"icy-butterfly-4100.email-0kn8d.workers.dev"}},"client-fingerprint":"chrome"}
-  - {"name":"🚩CF | 🟢 | vmess | @Hope_Net | 15","type":"vmess","server":"104.21.83.208","port":443,"cipher":"auto","uuid":"f584de15-2034-4170-a723-f48c2bae5e0f","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"host":"afrhms16v.bestxray.buzz"}},"client-fingerprint":"chrome"}
   - {"name":"🚩CF | 🟢 | vmess | @Hope_Net | 16","type":"vmess","server":"172.67.161.77","port":443,"cipher":"auto","uuid":"edbb1059-1633-4271-b66e-ed4fba47a1bf","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"host":"linde06.indiavideo.sbs"}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @Hope_Net | 18","type":"vmess","server":"www.parsvds.com","port":2087,"cipher":"auto","uuid":"f628ea64-6a62-4fc3-90c1-7d44241dc09e","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"OfFeR.MirAclestORy.tOP."}},"client-fingerprint":"chrome"}
   - {"name":"🇺🇸US | 🟢 | vmess | @fnet00 | 1","type":"vmess","server":"v2ray.codefyinc.com","port":443,"cipher":"auto","uuid":"2c981164-9b93-4bca-94ff-b78d3f8498d7","alterId":0,"tls":true,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/vmessws","headers":{"host":"v2ray.codefyinc.com"}},"client-fingerprint":"chrome"}
-  - {"name":"🇩🇪DE | 🟢 | vmess | @FreakConfig | 3","type":"vmess","server":"91.99.2.86","port":8880,"cipher":"auto","uuid":"9a99466d-58ee-4f97-8a8b-cb0bd3d786a1","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
+  - {"name":"🇩🇪DE | 🟢 | vmess | @FreakConfig | 4","type":"vmess","server":"91.99.2.86","port":8880,"cipher":"auto","uuid":"9a99466d-58ee-4f97-8a8b-cb0bd3d786a1","alterId":0,"tls":false,"skip-cert-verify":true,"network":"tcp","client-fingerprint":"chrome"}
 proxy-groups:
   - name: MANUAL
     type: select
@@ -58,6 +61,10 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 14'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
+      - '🇦🇹AT | 🟢 | vmess | @ConfigsHUB | 3'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 4'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 5'
+      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 13'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇯🇵JP | 🟢 | vmess | @yaney_01 | 2'
@@ -76,11 +83,10 @@ proxy-groups:
       - '🇧🇬BG | 🟢 | vmess | @Hope_Net | 12'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 13'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
-      - '🚩CF | 🟢 | vmess | @Hope_Net | 15'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 16'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 18'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 3'
+      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 4'
   - name: URL-TEST
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -98,6 +104,10 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 14'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
+      - '🇦🇹AT | 🟢 | vmess | @ConfigsHUB | 3'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 4'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 5'
+      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 13'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇯🇵JP | 🟢 | vmess | @yaney_01 | 2'
@@ -116,11 +126,10 @@ proxy-groups:
       - '🇧🇬BG | 🟢 | vmess | @Hope_Net | 12'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 13'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
-      - '🚩CF | 🟢 | vmess | @Hope_Net | 15'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 16'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 18'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 3'
+      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 4'
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -137,6 +146,10 @@ proxy-groups:
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 14'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 15'
       - '🇨🇳CN | 🟢 | vmess | @mftizi | 16'
+      - '🇦🇹AT | 🟢 | vmess | @ConfigsHUB | 3'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 4'
+      - '🚩CF | 🟢 | vmess | @ConfigsHUB | 5'
+      - '🇹🇷TR | 🟢 | vmess | @ConfigsHUB | 13'
       - '🇫🇮FI | 🟢 | vmess | @proxystore11 | 6'
       - '🇹🇼TW | 🟢 | vmess | @yaney_01 | 1'
       - '🇯🇵JP | 🟢 | vmess | @yaney_01 | 2'
@@ -155,11 +168,10 @@ proxy-groups:
       - '🇧🇬BG | 🟢 | vmess | @Hope_Net | 12'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 13'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 14'
-      - '🚩CF | 🟢 | vmess | @Hope_Net | 15'
       - '🚩CF | 🟢 | vmess | @Hope_Net | 16'
       - '🇺🇸US | 🟢 | vmess | @Hope_Net | 18'
       - '🇺🇸US | 🟢 | vmess | @fnet00 | 1'
-      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 3'
+      - '🇩🇪DE | 🟢 | vmess | @FreakConfig | 4'
 rules:
  - GEOIP,IR,DIRECT
  - MATCH,MANUAL
