--- a/reality_clash.yaml
+++ b/reality_clash.yaml
@@ -28,9 +28,6 @@ proxies:
   - {"name":"🇫🇮FI | 🔴 | vless | @prrofile_purple | 135","type":"vless","server":"46.62.168.70","port":23737,"udp":false,"uuid":"debf2a42-1ff4-4ea6-92a4-f6ac49595cc7","tls":false,"servername":"varzesh3.com","network":"grpc","reality-opts":{"public-key":"i5nssGunCVG0W2CI3OM-wGXJwCn9W5Xvm0-tQw_SgEQ","short-id":"7c0b6c88fe5c","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"❔XX | 🟢 | vless | @prrofile_purple | 139","type":"vless","server":"delta.realtechshop.top","port":443,"udp":false,"uuid":"ff8fffd7-3546-488b-a5f2-a74896da74a2","tls":false,"servername":"tgju.org","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"tw6uAbjXzRSIKChb6pDbHVNjnU9Don4hbv6dHRkmJx8","short-id":"e54b5ad736ae4c38","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇨🇦CA | 🔴 | vless | @VmessProtocol | 0","type":"vless","server":"40.233.102.224","port":42557,"udp":false,"uuid":"2429bee3-e0c1-47dd-b420-75e6512b184b","tls":false,"servername":"www.yahoo.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"LiHpb4jWrgHBSpi1mjKH3I8m2ahpVNexeNDh-sMW3Xo","short-id":"f430927d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vless | @ConfigsHUB | 5","type":"vless","server":"94.26.228.10","port":443,"udp":false,"uuid":"1a6fe500-59da-4598-8576-256f06765ffb","tls":false,"servername":"ru.sfasti.ru","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"J_jQq9-SWQZjiMhuPaFV7V2MaJ4pkKgVRaz7x6tmvy8","short-id":"16895459a2c7768d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇨🇦CA | 🟢 | vless | @ConfigsHUB | 16","type":"vless","server":"amazon-20.cristiano.name.ng","port":443,"udp":false,"uuid":"4c26ebc3-7784-46d8-b52a-7b0ccae6f4b4","tls":false,"servername":"store.steampowered.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"TGlPtfVzGIVpMauPRMGJj2Uu6GUiCpu5ZizIIjw-wx4","short-id":"f5","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
-  - {"name":"🇷🇺RU | 🟢 | vless | @ConfigsHUB | 18","type":"vless","server":"ru.sfasti.ru","port":443,"udp":false,"uuid":"1a6fe500-59da-4598-8576-256f06765ffb","tls":false,"servername":"ru.sfasti.ru","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"J_jQq9-SWQZjiMhuPaFV7V2MaJ4pkKgVRaz7x6tmvy8","short-id":"16895459a2c7768d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @free1_vpn | 8","type":"vless","server":"51.38.98.69","port":443,"udp":false,"uuid":"6b690c69-7301-44c4-81e8-9d5d7e8263a6","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"-3sZE2OPDhkNtxufF2YqPmoa5hqVna5zalfJfrUiMm0","short-id":"ecd6615548c2bddb","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 4","type":"vless","server":"deepend.paneltelecode.xyz","port":443,"udp":false,"uuid":"028e0ae7-5640-492d-bdae-f3c44d47e42d","tls":false,"servername":"afternic.com","network":"grpc","grpc-opts":{"grpc-service-name":"Dev"},"reality-opts":{"public-key":"J5aaCYQft4PeaMxenmrVh5WUQYRXuKNUtblM9TRpXAk","short-id":"cc26b226","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 9","type":"vless","server":"2.58.95.16","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
@@ -38,6 +35,7 @@ proxies:
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11","type":"vless","server":"195.93.253.49","port":33094,"udp":false,"uuid":"6f8923d9-f812-4ca6-b93a-8f9227bf2eab","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"35JazACyPS6LcDwpGibneEeMzkzGYWf4KTG_Oqp0oBE","short-id":"29489194da0d5d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 15","type":"vless","server":"31.169.124.240","port":34045,"udp":false,"uuid":"d8dd94fd-540e-461d-b5d4-acebef02c22a","tls":false,"servername":"visit-this-invitation-link-to-join-tg-enkelte-notif.ekt.me","network":"tcp","reality-opts":{"public-key":"cDaDzPr3PlS3NM8lreHZbdo-Mhqz8vMBzMSkHXhGIUA","short-id":"e8ab71d0","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇦🇹AT | 🟢 | vless | @FreakConfig | 0","type":"vless","server":"5.181.21.152","port":24170,"udp":false,"uuid":"6a8ee307-a1fb-4801-92e2-86253ecdd88d","tls":false,"servername":"yahoo.com","network":"tcp","reality-opts":{"public-key":"rhEEZAZBX-seWl5f0JmyE19Iwxb5zTNH5yT-FhaS8Hw","short-id":"200f99e321","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
+  - {"name":"🇷🇺RU | 🟢 | vless | @FreakConfig | 1","type":"vless","server":"94.26.228.10","port":443,"udp":false,"uuid":"1a6fe500-59da-4598-8576-256f06765ffb","tls":false,"servername":"ru.sfasti.ru","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"J_jQq9-SWQZjiMhuPaFV7V2MaJ4pkKgVRaz7x6tmvy8","short-id":"16895459a2c7768d","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇹🇷TR | 🟢 | vless | @FreakConfig | 3","type":"vless","server":"62.60.233.250","port":443,"udp":false,"uuid":"fd0cdd44-2361-11f0-9970-45e1d80c4039","tls":false,"servername":"images.apple.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"MFsbnsNQsSpZwP-_Ohzako6aHpfK4-rbssxhr3eywWw","short-id":"4476a3","client-fingerprint":"chrome"},"client-fingerprint":"chrome"}
   - {"name":"🇩🇪DE | 🟢 | vless | @flyv2ray | 0","type":"vless","server":"bfly.tuozs.ir","port":2083,"udp":false,"uuid":"858a3856-4dce-4241-8ed2-fea94418d9ba","tls":false,"servername":"miro.com","network":"grpc","reality-opts":{"public-key":"tMVNburGfNg0IHRgzlmoqV22mx1GgkRe8qzBouEYY3Y","short-id":"a25aca9336","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
   - {"name":"🇩🇪DE | 🟢 | vless | @flyv2ray | 4","type":"vless","server":"bfly.tuozs.ir","port":2083,"udp":false,"uuid":"de4f5606-baf6-4bc2-a715-7cfe39dda1ed","tls":false,"servername":"miro.com","network":"grpc","reality-opts":{"public-key":"tMVNburGfNg0IHRgzlmoqV22mx1GgkRe8qzBouEYY3Y","short-id":"a25aca9336","client-fingerprint":"firefox"},"client-fingerprint":"firefox"}
@@ -80,9 +78,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇨🇦CA | 🔴 | vless | @VmessProtocol | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 5'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 16'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 18'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 8'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 9'
@@ -90,6 +85,7 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 15'
       - '🇦🇹AT | 🟢 | vless | @FreakConfig | 0'
+      - '🇷🇺RU | 🟢 | vless | @FreakConfig | 1'
       - '🇹🇷TR | 🟢 | vless | @FreakConfig | 3'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 0'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 4'
@@ -132,9 +128,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇨🇦CA | 🔴 | vless | @VmessProtocol | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 5'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 16'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 18'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 8'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 9'
@@ -142,6 +135,7 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 15'
       - '🇦🇹AT | 🟢 | vless | @FreakConfig | 0'
+      - '🇷🇺RU | 🟢 | vless | @FreakConfig | 1'
       - '🇹🇷TR | 🟢 | vless | @FreakConfig | 3'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 0'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 4'
@@ -183,9 +177,6 @@ proxy-groups:
       - '🇫🇮FI | 🔴 | vless | @prrofile_purple | 135'
       - '❔XX | 🟢 | vless | @prrofile_purple | 139'
       - '🇨🇦CA | 🔴 | vless | @VmessProtocol | 0'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 5'
-      - '🇨🇦CA | 🟢 | vless | @ConfigsHUB | 16'
-      - '🇷🇺RU | 🟢 | vless | @ConfigsHUB | 18'
       - '🇩🇪DE | 🟢 | vless | @free1_vpn | 8'
       - '🇫🇮FI | 🔴 | vless | @Outlinev2rayNG | 4'
       - '🇵🇱PL | 🟢 | vless | @Outlinev2rayNG | 9'
@@ -193,6 +184,7 @@ proxy-groups:
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 11'
       - '🇳🇱NL | 🟢 | vless | @Outlinev2rayNG | 15'
       - '🇦🇹AT | 🟢 | vless | @FreakConfig | 0'
+      - '🇷🇺RU | 🟢 | vless | @FreakConfig | 1'
       - '🇹🇷TR | 🟢 | vless | @FreakConfig | 3'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 0'
       - '🇩🇪DE | 🟢 | vless | @flyv2ray | 4'
